# algolab-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.algolab/: config.json  index.json
algolab/: __init__.py  cli.py
algolab/runners/: __init__.py  c.py  common.py  cpp.py  go.py  java.py  python.py  python_worker.py  rust.py
algolab/templates/: __init__.py
algolab/templates/agent/: AGENTS.md.tpl  CLAUDE.md.tpl
algolab/templates/problem/c/: solution.c.tpl
algolab/templates/problem/common/: meta.json.tpl  problem.md.tpl
algolab/templates/problem/common/records/: test-analysis.md.tpl
algolab/templates/problem/common/tests/: cases.json.tpl  generator.py.tpl  interface.json.tpl  oracle.py.tpl
algolab/templates/problem/cpp/: solution.cpp.tpl
algolab/templates/problem/go/: solution.go.tpl
algolab/templates/problem/java/: Solution.java.tpl
algolab/templates/problem/python/: solution.py.tpl
algolab/templates/problem/rust/: solution.rs.tpl
algolab/templates/skill/algolab/: SKILL.md
algolab/templates/skill/algolab/references/: coaching.md  problem-authoring.md  runners.md  testing.md  workspace.md
docs/: AGENTS_zh.md  README_zh.md
problems/0004-contains-duplicate/: meta.json  problem.md
problems/0004-contains-duplicate/records/: test-analysis.md
problems/0004-contains-duplicate/tests/: cases.json  generator.py  interface.json  oracle.py
skills/algolab/references/: i18n.md
